--- a/client/src/components/views/FavoritePage/favorite.css
+++ b/client/src/components/views/FavoritePage/favorite.css
@@ -1,20 +1,20 @@
 table {
-	font-family: arial, sans-serif;
-	border-collapse: collapse;
-	width: 100%;
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
 }
 
 td,
 th {
-	border: 1px solid #dddddd;
-	text-align: left;
-	padding: 8px;
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
 }
 
 tr:nth-child(even) {
-	background-color: #dddddd;
+    background-color: goldenrod;
 }
 
 .text-center {
-	text-align: 'center';
+    text-align: 'center';
 }
